deploy/manifests/kcas-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kcas
  name: kcas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kcas
  strategy: {}
  template:
    metadata:
      labels:
        app: kcas
    spec:
      serviceAccountName: kcas
      securityContext:
        runAsUser: 1900
        runAsGroup: 1900
      containers:
      - name: kcas
        image: thewebroot/kcas:v0.0.1
        command:
          - /kcas
        args:
          - "--configmap-namespace=kcas-system"
        ports:
          - containerPort: 5555
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            scheme: HTTP
            port: 5555
            path: /healthz
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            scheme: HTTP
            port: 5555
            path: /readyz
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 128Mi
status: {}
