deploy/manifests/kcas-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kcas
  name: kcas
spec:
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 5555
  selector:
    app: kcas
  type: ClusterIP
status:
  loadBalancer: {}
